Actualizacion de proyecto con dependencias necesarias, mediante composer. Configuracion de Zf2 con Doctrine 2. Prototipo de pruebas, api de org_parte

--- a/Implementacion/proySC/module/Org/view/org/skeleton/index.phtml
+++ b/Implementacion/proySC/module/Org/view/org/skeleton/index.phtml
@@ -1,3 +1,1 @@
-<strong>Module:</strong>        ZendSkeletonModule &raquo;
-<strong>Controller:</strong>    Skeleton &raquo;
-<strong>Action:</strong>        index
+<strong><?php print_r($rs);?></strong>
